<resources>
    <string name="app_name">E Commerce My Mall</string>
    <string name="all">All</string>
    <string name="hp"><![CDATA[Smartphone & Tablet]]></string>
    <string name="electronic">Electronic</string>
    <string name="food">Food</string>
    <string name="see_all">See All</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="history_product">History Product</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="process">Process</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="checkout">Checkout</string>
    <string name="address">Address</string>
    <string name="search_address">Search Address</string>
    <string name="save_address">Save Address</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="payment_in_mall">Payments in Mall.id</string>
    <string name="credit_card">Credit Card</string>
    <string name="tansfer_virtual_account">Transfer Virtual Account</string>
    <string name="bca_va">BCA VA</string>
    <string name="mandiri_va">Mandiri VA</string>
    <string name="save_delivery">Save Delivery Duration</string>
    <string name="detail">Details</string>
    <string name="items">Items</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_google">Sign In Google</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>