<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".View.Login.LoginActivity">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        style="@style/TextView.poppinsReguler18SpGold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        style="@style/EditText.third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        style="@style/EditText.third"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/btn_sign_in"
        style="@style/Button.primary"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/btn_primary"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/btn_sign_in_google"
        style="@style/Button.secondary"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_btn_address_secondary"
        android:text="@string/sign_in_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <TextView
        android:id="@+id/textView8"
        style="@style/TextView.poppinsReguler12SpWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />

    <TextView
        android:id="@+id/txt_sign_up"
        style="@style/TextView.poppinsBold12SpGold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />
</androidx.constraintlayout.widget.ConstraintLayout>