<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".View.Profile.ProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorGrey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextView.poppinsReguler18SpGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/hp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"></de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/TextView.poppinsReguler14SpWhite"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/EditText.secondary"
            android:text="Fahmi Abdul Aziz"
            android:background="@drawable/bg_input_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="25dp"
            style="@style/TextView.poppinsReguler14SpWhite"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/EditText.secondary"
            android:text="082384863761"
            android:background="@drawable/bg_input_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="25dp"
            style="@style/TextView.poppinsReguler14SpWhite"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/EditText.secondary"
            android:text="fahmiabdulaziz44@gmail.com"
            android:background="@drawable/bg_input_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:layout_marginTop="25dp"
            style="@style/TextView.poppinsReguler14SpWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EditText.secondary"
                android:text="07"
                android:background="@drawable/bg_input_profile"/>
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EditText.secondary"
                android:text="Oktober"
                android:background="@drawable/bg_input_profile"/>
            <EditText
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EditText.secondary"
                android:text="2001"
                android:background="@drawable/bg_input_profile"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="25dp"
            style="@style/TextView.poppinsReguler14SpWhite"/>

        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/EditText.secondary"
            android:text="Padang"
            android:background="@drawable/bg_input_profile"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>