<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".View.AddressMenu.AddressMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorGrey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextView.poppinsReguler18SpGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:background="@drawable/bg_input_search"
        android:inputType="textPersonName"
        android:hint="@string/search_address"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="15dp"
        android:paddingLeft="20dp"
        style="@style/EditText.primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btn_save_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/save_address"
        android:background="@drawable/bg_btn_address_secondary"
        style="@style/Button.primary_proses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressAddress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>