<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.DetailsMenu.DetailsMenuActivity1">

    <ImageView
        android:id="@+id/imgGambar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="359dp"
        android:background="@drawable/bg_details"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imgGambar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtNamaProduct"
                    style="@style/TextView.poppinsMedium14SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Infinix.id" />

                <TextView
                    android:id="@+id/txtSubNamaProduct"
                    style="@style/TextView.poppinsBold24SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Infinix Zero 8" />

                <TextView
                    android:id="@+id/txtHargaProduct"
                    style="@style/TextView.poppinsReguler16SpGold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Rp 3.999.999" />

                <TextView
                    android:id="@+id/txtSubHargaProduct"
                    style="@style/TextView.poppinsReguler18SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Rp 299.999" />

                <TextView
                    android:id="@+id/txtDiskon"
                    style="@style/TextView.poppinsMedium14SpGold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Diskon Rp 1.000.000" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/TextView.poppinsBold10SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi" />

                <TextView
                    android:id="@+id/txtDeskripsi"
                    style="@style/TextView.poppinsReguler10SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kameja Channel" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/TextView.poppinsReguler10SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/history_product" />

                <TextView
                    android:id="@+id/txtNilai"
                    style="@style/TextView.poppinsReguler10SpWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nilai : 10/10" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/TextView.poppinsReguler10SpGold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selengkapnya" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_proses"
                style="@style/Button.primary_proses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_proses_primary"
                android:text="@string/process"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>